New write ups and updated Resume

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
           I'm a junior at University of Michigan pursuing a degree in Computer Science Engineering.
           I've been coding for over six years and have had experience in industry through internships and research.
           Engineering has taught me a lot about creative problem-solving and writing efficient code.
+          Most of all I just love coding and enjoy attending hackathons and coding my own side projects.
           I'm a quick learner and enthusiastic about expanding my knowledge of computer science through a summer internship.
         </p>
         <a href="/Resume.pdf" role="button" class="btn btn-primary" style="text-align: center; margin-top: 25px;">
@@ -72,8 +73,8 @@
             <div class="col" style="text-align:right"><p>More Proficient</p></div>
           </div>
           <div class="progress"><div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">C++</div></div>
-          <div class="progress"><div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">HTML/CSS/JS</div></div>
-          <div class="progress"><div class="progress-bar" role="progressbar" style="width: 70%;" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100">Java</div></div>
+          <div class="progress"><div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">JavaScript</div></div>
+          <div class="progress"><div class="progress-bar" role="progressbar" style="width: 70%;" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">Java</div></div>
         </div>
         <div class="col">
           <!-- <div class="row skill-labels">
@@ -84,8 +85,8 @@
             <div class="col" style="text-align:right"><p>More Proficient</p></div>
           </div>
           <div class="progress"><div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">Python</div></div>
-          <div class="progress"><div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">ReactJS</div></div>
-          <div class="progress"><div class="progress-bar" role="progressbar" style="width: 60%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">MATLAB</div></div>
+          <div class="progress"><div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">ReactJS</div></div>
+          <div class="progress"><div class="progress-bar" role="progressbar" style="width: 95%;" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">HTML/CSS</div></div>
         </div>
       </div>
     </div>
@@ -106,18 +107,37 @@
               <h5 class="card-title">IoT Asset Tracker</h5>
               <p class="card-text">The IoT Asset Tracker is a proof-of-concept decentralized application designed to run on the Ethereum platform.
                 It’s an adaptation on a simple bidding application made to allow IoT device owners to list their data for sale.
-                The front-end was designed with ReactJS and it connects to a custom smart contract written in Solidity.</p>
-              <a href="#" class="btn btn-primary"><i class="fab fa-github"></i> Source</a>
+                The front-end was designed with ReactJS and it connects to a custom smart contract written in Solidity.
+                I'm particularly proud of how this project leverages asynchronous calls to accomodate for Ethereum transaction times.</p>
+              <a href="https://github.com/ryjo1026/IoTAssetTracker/" class="btn btn-primary"><i class="fab fa-github"></i> Source</a>
             </div>
           </div>
         </div>
         <div class="col-sm-6">
           <div class="card">
             <div class="card-body">
-              <h5 class="card-title">ryanpjohnston.com</h5>
-              <p class="card-text">I designed this site from scratch using HTML5/CSS3 and the Bootstrap framework with the goal of making it lightweight and easy to navigate.
-                This site is a continual work-in-progress and I try to update it often with new accomplishments and different design trends that interest me.</p>
-              <a href="#" class="btn btn-primary"><i class="fab fa-github"></i> Source</a>
+              <h5 class="card-title">SlideSync</h5>
+              <p class="card-text">SlideSync is a lecture web application with main features of synchronized slides, collaborative note taking, and a chat.
+              As part of the MHacks11 Hackathon, my team and I designed this project in 36 hours.
+              We heavily leveraged ReactJS, Google Firebase, and Twilio to create this.
+              I'm particularly proud of how neat the code was kept and how polished the features turned out to be despite this being a hackathon project.</p>
+              <a href="https://slidesync.me" class="btn btn-primary"> Demo</a>
+              <a href="https://github.com/ryanthomasjohnson/SlideSync" class="btn btn-primary"><i class="fab fa-github"></i> Source</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      </br>
+      <div class="row">
+        <div class="col-sm-6 offset-sm-3">
+          <div class="card">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title">ryanpjohnston.com</h5>
+                <p class="card-text">I designed this site from scratch using HTML5/CSS3 and the Bootstrap framework with the goal of making it lightweight and easy to navigate.
+                  This site is a continual work-in-progress and I try to update it often with new accomplishments and different design trends that interest me.</p>
+                <a href="https://github.com/ryjo1026/ryjo1026.github.io" class="btn btn-primary"><i class="fab fa-github"></i> Source</a>
+              </div>
             </div>
           </div>
         </div>
@@ -181,7 +201,7 @@
         <div class="col-sm-10 education-text">
           <p class="lead">University of Michigan | Computer Science B.S.E | 2016-<span style="color: #aaa">2020</span></p>
           <ul>
-            <li><b>Relevant Coursework:</b> Data Structures & Algorithms (EECS 281), Programming and Data Structures (EECS 280), Theory of Computation (EECS 376)</li>
+            <li><b>Relevant Coursework:</b> Data Structures & Algorithms (EECS 281), Web Systems (EECS 485), Programming and Data Structures (EECS 280), Computer Organization (EECS 370), Theory of Computation (EECS 376)</li>
             <li><b>UM::Autonomy:</b> UM::Autonomy is a student project team focused on making an autonomous boat.
               As a member of the business team I have lead the design of a new website: <a href="https://umautonomy.com">umautonomy.com</a> and completely redesigned our sponsorship material.
               I also carry out various tasks such as reaching out to sponsors and coordinating with the University.</li>
