--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             Lunds Tekniska Högskola (LTH) is a top-ranking University in Sweden.
             For two months I researched blockchain technology and decentralized applications, specifically with the Ethereum platform.
             In addition to designing the IoT Asset Tracker described above, my partner and I also automated setup of a private Ethereum network and
-            researched many of the posible use cases for Ethereum as well as its short comings.
+            researched many of the possible use cases for Ethereum as well as its short comings.
             We presented our findings to the faculty and wrote detailed documentation for further work.
           </p>
         </div>
