Added IA position to Experience section
Signed-off-by: Ryan Johnston <ryjo1026@gmail.com>

--- a/index.html
+++ b/index.html
@@ -168,19 +168,32 @@
           </p>
         </div>
       </div>
-      <div class="row justify-content-end experience-lth">
+      <div class="row justify-content-end experience-section-right">
         <div class="col-sm-7">
           <p class="lead"><a href="http://cs.lth.se">Lunds Tekniska Högskola</a> | Research Assistant | Summer 2018</p>
           <p>
             Lunds Tekniska Högskola (LTH) is a top-ranking University in Sweden.
             For two months I researched blockchain technology and decentralized applications, specifically with the Ethereum platform.
             In addition to designing the IoT Asset Tracker described above, my partner and I also automated setup of a private Ethereum network and
-            researched many of the possible use cases for Ethereum as well as its short comings.
+            researched many of the possible use cases and short comings of Ethereum.
             We presented our findings to the faculty and wrote detailed documentation for further work.
           </p>
         </div>
         <div class="col-sm-2">
           <img src="assets/img/logo-lth.png" class="img-fluid" alt="lth-logo" style="padding-top:20px">
+        </div>
+      </div>
+      <div class="row justify-content-start experience-section">
+        <div class="col-sm-2">
+          <img src="assets/img/logo-um-seal.png" class="img-fluid" alt="um-logo">
+        </div>
+        <div class="col-sm-7">
+          <p class="lead"><a href="https://eecs485staff.github.io/eecs485.org/">University of Michigan</a> | Instructional Assistant | Winter Term 2019</p>
+          <p>
+            EECS 485 is a popular upper-level Web Systems course taught at the University of Michigan with over 400 enrolled students.
+            After taking the course, I was selected to become an Instructional Assistant with the responsibility of designing and delivering projects and exams to students.
+            Additionally, I teach a weekly one-hour lab and hold office hours throughout the week.
+          </p>
         </div>
       </div>
     </div>
