--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
         <div class="col-sm-10 education-text">
           <p class="lead">University of Michigan | Computer Science B.S.E | 2016-<span style="color: #aaa">2020</span></p>
           <ul>
-            <li><b>Relevant Coursework:</b> Data Structures & Algorithms (EECS 281), Web Systems (EECS 485), Programming and Data Structures (EECS 280), Computer Organization (EECS 370), Theory of Computation (EECS 376)</li>
+            <li><b>Relevant Coursework:</b> Data Structures & Algorithms (EECS 281), Web Systems (EECS 485), Database Systems (EECS 484), Advanced Operating Systens (EECS 482), Programming and Data Structures (EECS 280)</li>
             <li><b>UM::Autonomy:</b> UM::Autonomy is a student project team focused on making an autonomous boat.
               As a member of the business team I have led the design of a new website: <a href="https://umautonomy.com">umautonomy.com</a> and completely redesigned our sponsorship material.
               I also carry out various tasks such as reaching out to sponsors and coordinating with the University.</li>
