Add BNY to Experience

--- a/index.html
+++ b/index.html
@@ -188,12 +188,23 @@
           <img src="assets/img/logo-um-seal.png" class="img-fluid" alt="um-logo">
         </div>
         <div class="col-sm-7">
-          <p class="lead"><a href="https://eecs485staff.github.io/eecs485.org/">University of Michigan</a> | Instructional Assistant | Winter Term 2019</p>
+          <p class="lead"><a href="https://eecs485staff.github.io/eecs485.org/">University of Michigan</a> | Instructional Assistant | Winter/Fall Terms 2019</p>
           <p>
             EECS 485 is a popular upper-level Web Systems course taught at the University of Michigan with over 400 enrolled students.
             After taking the course, I was selected to become an Instructional Assistant with the responsibility of designing and delivering projects and exams to students.
             Additionally, I teach a weekly one-hour lab and hold office hours throughout the week.
           </p>
+        </div>
+      </div>
+      <div class="row justify-content-end experience-section-right">
+        <div class="col-sm-7">
+          <p class="lead"><a href="https://www.bnymellon.com/">BNY Mellon</a> | Summer Technology Analyst | Summer 2019</p>
+          <p>
+            <em class="text-muted">Coming soon...</em>
+          </p>
+        </div>
+        <div class="col-sm-2">
+          <img src="assets/img/logo-bny.png" class="img-fluid" alt="bny-logo" style="padding-top:20px">
         </div>
       </div>
     </div>
