--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
       </div>
       <div class="row justify-content-end experience-section-right">
         <div class="col-sm-7">
-          <p class="lead"><a href="https://www.bnymellon.com/">BNY Mellon</a> | Summer Technology Analyst | Summer 2019</p>
+          <p class="lead"><a href="https://www.bnymellon.com/us/en/what-we-do/investment-services/alternative-investment-services/index.jsp">BNY Mellon</a> | Summer Technology Analyst | Summer 2019</p>
           <p>
             <em class="text-muted">Coming soon...</em>
           </p>
