Summer end update
Add BNY Mellon description, update Redsume, and minor summary changes.

--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
       <div class="col-9 summary">
         <p class="lead">Hi, my name is <b>Ryan Johnston</b>.</p>
         <p>
-          I'm a junior at University of Michigan pursuing a degree in Computer Science Engineering.
-          I've been coding for over six years and have had experience in industry through internships and research.
+          I'm a senior at University of Michigan pursuing a degree in Computer Science Engineering.
+          I've been coding for over seven years and have had experience in industry through internships and research.
           Engineering has taught me a lot about creative problem-solving and writing efficient code.
           Most of all I just love coding and enjoy attending hackathons and coding my own side projects.
-          I'm a quick learner and enthusiastic about expanding my knowledge of computer science through a summer internship.
+          I'm a quick learner and enthusiastic about expanding my knowledge of computer science.
         </p>
         <a href="/Resume.pdf" role="button" class="btn btn-primary" style="text-align: center; margin-top: 25px;">
           <i class="fas fa-download"></i> Resume
@@ -74,7 +74,7 @@
           </div>
           <div class="progress"><div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">C++</div></div>
           <div class="progress"><div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">JavaScript</div></div>
-          <div class="progress"><div class="progress-bar" role="progressbar" style="width: 70%;" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">Java</div></div>
+          <div class="progress"><div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">Java</div></div>
         </div>
         <div class="col">
           <!-- <div class="row skill-labels">
@@ -200,7 +200,10 @@
         <div class="col-sm-7">
           <p class="lead"><a href="https://www.bnymellon.com/us/en/what-we-do/investment-services/alternative-investment-services/index.jsp">BNY Mellon</a> | Summer Technology Analyst | Summer 2019</p>
           <p>
-            <em class="text-muted">Coming soon...</em>
+            BNY Mellon is the world's largest custodian bank and asset servicer. 
+            I worked within the Alternative Investments Technology department with the main goal of designing and building a new testing framework. 
+            I learned a lot about object-oriented programming and design patterns as well as behavior-driven testing.
+            This experience also strengthened my knowledge of Selenium and Java.
           </p>
         </div>
         <div class="col-sm-2">
@@ -225,7 +228,7 @@
         <div class="col-sm-10 education-text">
           <p class="lead">University of Michigan | Computer Science B.S.E | 2016-<span style="color: #aaa">2020</span></p>
           <ul>
-            <li><b>Relevant Coursework:</b> Data Structures & Algorithms (EECS 281), Web Systems (EECS 485), Database Systems (EECS 484), Advanced Operating Systems (EECS 482), Programming and Data Structures (EECS 280)</li>
+            <li><b>Relevant Coursework:</b>Advanced Operating Systems (EECS 482), Distributed Systems (EECS 491), Web Systems (EECS 485), Database Management Systems (EECS 484)</li>
             <li><b>UM::Autonomy:</b> UM::Autonomy is a student project team focused on making an autonomous boat.
               As a member of the business team I have led the design of a new website: <a href="https://umautonomy.com">umautonomy.com</a> and completely redesigned our sponsorship material.
               I also carry out various tasks such as reaching out to sponsors and coordinating with the University.</li>
