Add id's to link to sections

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </div>
 
   <!-- Introduction -->
-  <div class="container">
+  <div class="container" id="introduction">
     <div class="row">
       <div class="col">
         <img src="assets/img/portrait.jpg" class="img-fluid" alt="portrait">
@@ -58,7 +58,7 @@
   </div>
 
   <!-- Skills -->
-  <div class="skills">
+  <div class="skills" id="skills">
     <div class="container">
       <div class="row">
         <div class="col section-header-center">
@@ -93,7 +93,7 @@
   </div>
 
   <!-- Projects -->
-  <div class="projects">
+  <div class="projects" id="projects">
     <div class="container">
       <div class="row">
         <div class="col section-header-left">
@@ -146,7 +146,7 @@
   </div>
 
   <!-- Experience -->
-  <div class="experience">
+  <div class="experience" id="experience">
     <div class="container">
       <div class="row">
         <div class="col section-header-center">
@@ -214,7 +214,7 @@
   </div>
 
   <!-- Education -->
-  <div class="education">
+  <div class="education" id="education">
     <div class="container">
       <div class="row">
         <div class="col section-header-left">
