Add BigChat to projects

--- a/index.html
+++ b/index.html
@@ -104,39 +104,61 @@
         <div class="col-sm-6">
           <div class="card">
             <div class="card-body">
-              <h5 class="card-title">IoT Asset Tracker</h5>
-              <p class="card-text">The IoT Asset Tracker is a proof-of-concept decentralized application designed to run on the Ethereum platform.
-                It’s an adaptation on a simple bidding application made to allow IoT device owners to list their data for sale.
-                The front-end was designed with ReactJS and it connects to a custom smart contract written in Solidity.
-                I'm particularly proud of how this project leverages asynchronous calls to accomodate for Ethereum transaction times.</p>
-              <a href="https://github.com/ryjo1026/IoTAssetTracker/" class="btn btn-primary"><i class="fab fa-github"></i> Source</a>
+              <h5 class="card-title">SlideSync</h5>
+              <p class="card-text">SlideSync is a lecture web application with main features of synchronized slides, collaborative
+                note taking, and a chat.
+                As part of the MHacks11 Hackathon, my team and I designed this project in 36 hours.
+                We heavily leveraged ReactJS, Google Firebase, and Twilio to create this.
+                I'm particularly proud of how neat the code was kept and how polished the features turned out to be despite this
+                being a hackathon project.</p>
+              <a href="https://slidesync.me" class="btn btn-primary"> Demo</a>
+              <a href="https://github.com/ryanthomasjohnson/SlideSync" class="btn btn-primary"><i class="fab fa-github"></i>
+                Source</a>
             </div>
           </div>
         </div>
         <div class="col-sm-6">
           <div class="card">
             <div class="card-body">
-              <h5 class="card-title">SlideSync</h5>
-              <p class="card-text">SlideSync is a lecture web application with main features of synchronized slides, collaborative note taking, and a chat.
-              As part of the MHacks11 Hackathon, my team and I designed this project in 36 hours.
-              We heavily leveraged ReactJS, Google Firebase, and Twilio to create this.
-              I'm particularly proud of how neat the code was kept and how polished the features turned out to be despite this being a hackathon project.</p>
-              <a href="https://slidesync.me" class="btn btn-primary"> Demo</a>
-              <a href="https://github.com/ryanthomasjohnson/SlideSync" class="btn btn-primary"><i class="fab fa-github"></i> Source</a>
+              <h5 class="card-title">BigChat</h5>
+              <p class="card-text">BigChat is a Google chrome extension to bring chat functionality to every site.
+              This project was started at the MHacks12 Hackathon but my team and I are continuing development.
+              We plan to improve the interface as well as add additional sync functionality for sites with video such as Netflix.
+              I'm particularly proud of the low chat latency and custom chat UI.
+              </br><em><b>Note: </b>This project is still a work in progress</em></p>
+              <a href="https://github.com/anders617/BigChat" class="btn btn-primary"><i class="fab fa-github"></i> Source</a>
             </div>
           </div>
         </div>
       </div>
       </br>
       <div class="row">
-        <div class="col-sm-6 offset-sm-3">
+        <div class="col-sm-6">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">IoT Asset Tracker</h5>
+              <p class="card-text">The IoT Asset Tracker is a proof-of-concept decentralized application designed to run on the
+                Ethereum platform.
+                It’s an adaptation on a simple bidding application made to allow IoT device owners to list their data for sale.
+                The front-end was designed with ReactJS and it connects to a custom smart contract written in Solidity.
+                I'm particularly proud of how this project leverages asynchronous calls to accomodate for Ethereum transaction
+                times.</p>
+              <a href="https://github.com/ryjo1026/IoTAssetTracker/" class="btn btn-primary"><i class="fab fa-github"></i>
+                Source</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6">
           <div class="card">
             <div class="card">
               <div class="card-body">
                 <h5 class="card-title">ryanpjohnston.com</h5>
-                <p class="card-text">I designed this site from scratch using HTML5/CSS3 and the Bootstrap framework with the goal of making it lightweight and easy to navigate.
-                  This site is a continual work-in-progress and I try to update it often with new accomplishments and different design trends that interest me.</p>
-                <a href="https://github.com/ryjo1026/ryjo1026.github.io" class="btn btn-primary"><i class="fab fa-github"></i> Source</a>
+                <p class="card-text">I designed this site from scratch using HTML5/CSS3 and the Bootstrap framework with the goal
+                  of making it lightweight and easy to navigate.
+                  This site is a continual work-in-progress and I try to update it often with new accomplishments and different
+                  design trends that interest me.</p>
+                <a href="https://github.com/ryjo1026/ryjo1026.github.io" class="btn btn-primary"><i class="fab fa-github"></i>
+                  Source</a>
               </div>
             </div>
           </div>
