--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
         <div class="col-sm-10 education-text">
           <p class="lead">University of Michigan | Computer Science B.S.E | 2016-<span style="color: #aaa">2020</span></p>
           <ul>
-            <li><b>Relevant Coursework:</b>Advanced Operating Systems (EECS 482), Distributed Systems (EECS 491), Web Systems (EECS 485), Database Management Systems (EECS 484)</li>
+            <li><b>Relevant Coursework:</b> Advanced Operating Systems (EECS 482), Distributed Systems (EECS 491), Web Systems (EECS 485), Database Management Systems (EECS 484), Compiler Construction (EECS 483), UI Design (EECS 493)</li>
             <li><b>UM::Autonomy:</b> UM::Autonomy is a student project team focused on making an autonomous boat.
               As a member of the business team I have led the design of a new website: <a href="https://umautonomy.com">umautonomy.com</a> and completely redesigned our sponsorship material.
               I also carry out various tasks such as reaching out to sponsors and coordinating with the University.</li>
