--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
       <div class="col-9 summary">
         <p class="lead">Hi, my name is <b>Ryan Johnston</b>.</p>
         <p>
-          I'm a senior at University of Michigan pursuing a degree in Computer Science Engineering.
-          I've been coding for over seven years and have had experience in industry through internships and research.
-          Engineering has taught me a lot about creative problem-solving and writing efficient code.
-          Most of all I just love coding and enjoy attending hackathons and coding my own side projects.
-          I'm a quick learner and enthusiastic about expanding my knowledge of computer science.
+          I'm a software developer at Amazon and graduate of the University of Michigan where I studied Computer Science Engineering.
+          I've been coding for over eight years and have had lots of great experience in industry through various internships and research.
+          I also enjoy teaching computer science and had the opportunity to serve as an IA at my alma mater.
+          Most of all I just love coding and enjoy attending hackathons, coding my own side projects and staying up to date on all the latest development.
+          I'm always looking for ways to make the world a better place through computer science.
         </p>
         <a href="/Resume.pdf" role="button" class="btn btn-primary" style="text-align: center; margin-top: 25px;">
           <i class="fas fa-download"></i> Resume
@@ -125,7 +125,6 @@
               This project was started at the MHacks12 Hackathon but my team and I are continuing development.
               We plan to improve the interface as well as add additional sync functionality for sites with video such as Netflix.
               I'm particularly proud of the low chat latency and custom chat UI.
-              </br><em><b>Note: </b>This project is still a work in progress</em></p>
               <a href="https://github.com/anders617/BigChat" class="btn btn-primary"><i class="fab fa-github"></i> Source</a>
             </div>
           </div>
@@ -210,7 +209,7 @@
           <img src="assets/img/logo-um-seal.png" class="img-fluid" alt="um-logo">
         </div>
         <div class="col-sm-7">
-          <p class="lead"><a href="https://eecs485staff.github.io/eecs485.org/">University of Michigan</a> | Instructional Assistant | Winter/Fall Terms 2019</p>
+          <p class="lead"><a href="https://eecs485staff.github.io/eecs485.org/">University of Michigan</a> | Instructional Assistant | Fall 2019 - Winter 2020</p>
           <p>
             EECS 485 is a popular upper-level Web Systems course taught at the University of Michigan with over 400 enrolled students.
             After taking the course, I was selected to become an Instructional Assistant with the responsibility of designing and delivering projects and exams to students.
@@ -232,6 +231,17 @@
           <img src="assets/img/logo-bny.png" class="img-fluid" alt="bny-logo" style="padding-top:20px">
         </div>
       </div>
+      <div class="row justify-content-start experience-section">
+        <div class="col-sm-2">
+          <img src="assets/img/logo-amazon.png" class="img-fluid" alt="um-logo">
+        </div>
+        <div class="col-sm-7">
+          <p class="lead"><a href="https://www.aboutamazon.com/">Amazon</a> | Software Developer | Fall 2020 -</p>
+          <p>
+            <em style="color: grey">Coming soon...</em>
+          </p>
+        </div>
+      </div>
     </div>
   </div>
 
@@ -248,7 +258,7 @@
           <img src="assets/img/logo-um.png" class="img-fluid" alt="um-logo">
         </div>
         <div class="col-sm-10 education-text">
-          <p class="lead">University of Michigan | Computer Science B.S.E | 2016-<span style="color: #aaa">2020</span></p>
+          <p class="lead">University of Michigan | Computer Science B.S.E | 2016-2020</p>
           <ul>
             <li><b>Relevant Coursework:</b> Advanced Operating Systems (EECS 482), Distributed Systems (EECS 491), Web Systems (EECS 485), Database Management Systems (EECS 484), Compiler Construction (EECS 483), UI Design (EECS 493)</li>
             <li><b>UM::Autonomy:</b> UM::Autonomy is a student project team focused on making an autonomous boat.
