--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
       <h1 class="display-4">Ryan Johnston</h1>
     </div>
     <div class="links">
-      <a href="https://www.linkedin.com/in/ryanpjohnston/" role="button" class="btn btn-outline-light" data-toggle="tooltip" data-placement="bottom" title="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
-      <a href="https://github.com/ryjo1026" role="button" class="btn btn-outline-light" data-toggle="tooltip" data-placement="bottom" title="GitHub"><i class="fab fa-github"></i></a>
-      <a href="mailto:ryanpj@umich.edu" role="button" class="btn btn-outline-light" data-toggle="tooltip" data-placement="bottom" title="Email"><i class="far fa-envelope"></i></a>
-      <a href="https://500px.com/rjohnston98" role="button" class="btn btn-outline-light" data-toggle="tooltip" data-placement="bottom" title="500px"><i class="fab fa-500px"></i></a>
+      <a href="https://www.linkedin.com/in/ryanpjohnston/" role="button" class="btn btn-outline-light" data-toggle="tooltip" data-placement="bottom" title="Connect with me!"><i class="fab fa-linkedin-in"></i></a>
+      <a href="https://github.com/ryjo1026" role="button" class="btn btn-outline-light" data-toggle="tooltip" data-placement="bottom" title="Look at some of my code!"><i class="fab fa-github"></i></a>
+      <a href="mailto:ryanpj@umich.edu" role="button" class="btn btn-outline-light" data-toggle="tooltip" data-placement="bottom" title="Send me a message!"><i class="far fa-envelope"></i></a>
+      <a href="https://500px.com/rjohnston98" role="button" class="btn btn-outline-light" data-toggle="tooltip" data-placement="bottom" title="Check out some of my photography!"><i class="fab fa-500px"></i></a>
     </div>
   </div>
 
