--- a/index.html
+++ b/index.html
@@ -236,10 +236,7 @@
           <img src="assets/img/logo-amazon.png" class="img-fluid" alt="um-logo">
         </div>
         <div class="col-sm-7">
-          <p class="lead"><a href="https://www.aboutamazon.com/">Amazon</a> | Software Developer | Fall 2020 -</p>
-          <p>
-            <em style="color: grey">Coming soon...</em>
-          </p>
+          <p class="lead"><a href="https://www.aboutamazon.com/">Amazon</a> | Software Developer | Fall 2020 - Present</p>
         </div>
       </div>
     </div>
